// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcTablePagination > #slots > should use given pages slot 1`] = `
<div
  class="ec-table-pagination__current-page"
  data-test="ec-table-pagination__current-page"
>
  
  <div>
    Pages slot: {"page":1,"numberOfItems":5,"totalPages":4,"total":20}
  </div>
  
</div>
`;

exports[`EcTablePagination > #slots > should use given total slot 1`] = `
<div
  class="ec-table-pagination__total ec-table-pagination__total--is-responsive"
  data-test="ec-table-pagination__total"
>
  
  <div>
    Total slot: {"page":1,"numberOfItems":5,"totalPages":4,"total":20}
  </div>
  
</div>
`;

exports[`EcTablePagination > should display first page information by calculating total number of pages 1`] = `
<div
  class="ec-table-pagination__current-page"
  data-test="ec-table-pagination__current-page"
>
  
  <span>
    1 of 4 pages
  </span>
  <span>
    (20 items)
  </span>
  
</div>
`;

exports[`EcTablePagination > should display last page information by calculating total number of pages 1`] = `
<div
  class="ec-table-pagination__current-page"
  data-test="ec-table-pagination__current-page"
>
  
  <span>
    4 of 4 pages
  </span>
  <span>
    (20 items)
  </span>
  
</div>
`;

exports[`EcTablePagination > should display next and prev buttons disabled if pagination has only one page 1`] = `
<div
  class="ec-table-pagination__actions ec-table-pagination__actions--is-responsive"
  data-test="ec-table-pagination__actions"
>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
    data-test="ec-table-pagination__action--prev"
    disabled=""
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-left"
      />
    </svg>
  </button>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--next ec-table-pagination__action--is-disabled"
    data-test="ec-table-pagination__action--next"
    disabled=""
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-right"
      />
    </svg>
  </button>
</div>
`;

exports[`EcTablePagination > should display next and prev buttons enabled if pagination is in the middle 1`] = `
<div
  class="ec-table-pagination__actions ec-table-pagination__actions--is-responsive"
  data-test="ec-table-pagination__actions"
>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--prev"
    data-test="ec-table-pagination__action--prev"
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-left"
      />
    </svg>
  </button>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--next"
    data-test="ec-table-pagination__action--next"
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-right"
      />
    </svg>
  </button>
</div>
`;

exports[`EcTablePagination > should display only next button disabled if pagination is on the last page 1`] = `
<div
  class="ec-table-pagination__actions ec-table-pagination__actions--is-responsive"
  data-test="ec-table-pagination__actions"
>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--prev"
    data-test="ec-table-pagination__action--prev"
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-left"
      />
    </svg>
  </button>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--next ec-table-pagination__action--is-disabled"
    data-test="ec-table-pagination__action--next"
    disabled=""
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-right"
      />
    </svg>
  </button>
</div>
`;

exports[`EcTablePagination > should display only prev button disabled if pagination is on the first page 1`] = `
<div
  class="ec-table-pagination__actions ec-table-pagination__actions--is-responsive"
  data-test="ec-table-pagination__actions"
>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
    data-test="ec-table-pagination__action--prev"
    disabled=""
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-left"
      />
    </svg>
  </button>
  <button
    class="ec-table-pagination__action ec-table-pagination__action--next"
    data-test="ec-table-pagination__action--next"
    type="button"
  >
    <svg
      class="ec-icon ec-table-pagination__action-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-chevron-right"
      />
    </svg>
  </button>
</div>
`;

exports[`EcTablePagination > should display page information by calculating total number of pages 1`] = `
<div
  class="ec-table-pagination__current-page"
  data-test="ec-table-pagination__current-page"
>
  
  <span>
    2 of 4 pages
  </span>
  <span>
    (20 items)
  </span>
  
</div>
`;

exports[`EcTablePagination > should display page information even if the total is 0 1`] = `
<div
  class="ec-table-pagination__current-page"
  data-test="ec-table-pagination__current-page"
>
  
  <span>
    1 of 1 pages
  </span>
  <span>
    (0 items)
  </span>
  
</div>
`;

exports[`EcTablePagination > should display page information when last page is incomplete 1`] = `
<div
  class="ec-table-pagination__current-page"
  data-test="ec-table-pagination__current-page"
>
  
  <span>
    6 of 6 pages
  </span>
  <span>
    (29 items)
  </span>
  
</div>
`;

exports[`EcTablePagination > should display the page size dropdown with preselected value 1`] = `
<div
  class="ec-table-pagination__page-size ec-table-pagination__page-size--is-responsive"
  data-test="ec-table-pagination__page-size"
>
  <div
    class="ec-table-pagination__page-size-text"
  >
    Items per page:
  </div>
  <div
    class="ec-dropdown-search"
    data-test="ec-dropdown-search"
  >
    <ec-stub
      autosize="true"
      class="ec-dropdown-search__trigger"
      data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
      disabled="false"
      distance="8"
      placement="bottom-start"
      popperclass="ec-dropdown-search__popover"
      shift="false"
      shown="false"
    >
      
      
      <button
        class="ec-table-pagination__action ec-table-pagination__action--page-size"
        data-test="ec-table-pagination__action--page-size"
        type="button"
      >
        50 
        <svg
          class="ec-icon ec-table-pagination__action-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      
      <div>
        <ul
          class="ec-dropdown-search__item-list"
          data-test="ec-dropdown-search__item-list"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <li
            class="ec-dropdown-search__item"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
            title="5"
          >
            
            5
            
          </li>
          <li
            class="ec-dropdown-search__item"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
            title="10"
          >
            
            10
            
          </li>
          <li
            class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
            title="50"
          >
            
            50
            
          </li>
          <li
            class="ec-dropdown-search__item"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
            title="100"
          >
            
            100
            
          </li>
          
          
        </ul>
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcTablePagination > should render as expected 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size ec-table-pagination__page-size--is-responsive"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        autosize="true"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
          type="button"
        >
          10 
          <svg
            class="ec-icon ec-table-pagination__action-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!--v-if-->
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              
              5
              
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              
              10
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              
              50
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              
              100
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    
    <span>
      1 of 1 pages
    </span>
    <span>
      (0 items)
    </span>
    
  </div>
  <div
    class="ec-table-pagination__total ec-table-pagination__total--is-responsive"
    data-test="ec-table-pagination__total"
  >
    
    
  </div>
  <div
    class="ec-table-pagination__actions ec-table-pagination__actions--is-responsive"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
      data-test="ec-table-pagination__action--prev"
      disabled=""
      type="button"
    >
      <svg
        class="ec-icon ec-table-pagination__action-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next ec-table-pagination__action--is-disabled"
      data-test="ec-table-pagination__action--next"
      disabled=""
      type="button"
    >
      <svg
        class="ec-icon ec-table-pagination__action-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;
